# xmaho

./: .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  README.md  annotated.html  autotest.sh  classes.html  classxmaho_1_1floating_1_1equal-members.html  classxmaho_1_1floating_1_1equal.html  classxmaho_1_1message_1_1http_1_1_basic_client-members.html  classxmaho_1_1message_1_1http_1_1_basic_client.html  classxmaho_1_1message_1_1http_1_1_basic_h_t_t_p11_client_builder-members.html  classxmaho_1_1message_1_1http_1_1_basic_h_t_t_p11_client_builder.html  classxmaho_1_1std__ext_1_1valmatrix-members.html  classxmaho_1_1std__ext_1_1valmatrix.html  client_8hpp.html  client_8hpp__dep__incl.dot  client_8hpp__dep__incl.map  client_8hpp__dep__incl.md5  client_8hpp__incl.dot  client_8hpp__incl.map  client_8hpp__incl.md5  client_8hpp_source.html  compare_8hpp.html  compare_8hpp__incl.dot  compare_8hpp_source.html  deprecated.html  dir_2c72b20f7a4fdc36cd4c86fb376add49.html  dir_b425b5cbd29d69064963bfb8c32abd59.html  dir_bb637d4680cc98a03661e71a21ad30d4.html  dir_cb5e078132d40eedfaca70ca419db752.html  dir_d57f1f89ae15905667d041ea627b557c.html  dir_e9f2033f50500f2149fd511eaa9112d3.html  dir_f8ab6e225302f5110eab32483ff5c37f.html  files.html  functions.html  functions_func.html  (+41 more)
.github/workflows/: ccpp.yml
docs/: annotated.html  classes.html  classxmaho_1_1std__ext_1_1valmatrix-members.html  classxmaho_1_1std__ext_1_1valmatrix.html  dir_2c72b20f7a4fdc36cd4c86fb376add49.html  dir_d57f1f89ae15905667d041ea627b557c.html  dir_f8ab6e225302f5110eab32483ff5c37f.html  files.html  functions.html  functions_func.html  functions_type.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.md5  inherits.html  point_8hpp.html  point_8hpp__incl.map  point_8hpp_source.html  valarray_8hpp.html  valarray_8hpp_source.html  valmatrix_8hpp.html  valmatrix_8hpp__incl.map  valmatrix_8hpp__incl.md5  valmatrix_8hpp_source.html
docs/search/: all_0.js  all_3.js  all_5.js  all_6.js  all_7.js  all_a.js  all_c.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_6.js  functions_8.js  functions_a.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js
doxygen/: CMakeLists.txt  Doxyfile.in  Doxygen.in
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  functions_d.js  (+10 more)
test/: CMakeLists.txt  gtest.cpp
test/floating/: CMakeLists.txt  compare.cpp
test/gtest/: CMakeLists.txt  gmock.cpp
test/input/: CMakeLists.txt  input.cpp
test/math/: CMakeLists.txt  residue_system.cpp
test/message/http/: CMakeLists.txt  client.cpp  http11client_builder.cpp
test/point/: CMakeLists.txt  point.cpp
test/std_ext/: CMakeLists.txt  valarray.cpp  valmatrix.cpp
xmaho/floating/: compare.hpp
xmaho/floating/detail/: compare.hpp
xmaho/input/: input.hpp
xmaho/input/detail/: input.hpp
xmaho/math/: residue_system.hpp
xmaho/math/detail/: residue_system.hpp  residue_system_base.hpp
xmaho/message/http/: client.hpp  http11client_builder.hpp
xmaho/message/http/detail/: client.hpp  http11client_builder.hpp
xmaho/point/: point.hpp
xmaho/point/detail/: point.hpp
xmaho/std_ext/: valarray.hpp  valmatrix.hpp
xmaho/std_ext/detail/: valarray.hpp  valmatrix.hpp
